syntax = "proto3";

package spine.test.model.verify;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.model.verify";
option java_outer_classname = "EventsProto";
option java_multiple_files = true;

message PhotoUploaded {
    bytes photo = 1;
    string title = 2;
}

message PhotoEdited {
    bytes new_photo = 1;
}

message TitleChanged {
    string new_title = 1;
}
